--- a/05_Web server/package.json
+++ b/05_Web server/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "04_Node Events",
+  "name": "05_Web server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
+    "start": "node server",
+    "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
