--- a/06_Express/package.json
+++ b/06_Express/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "04_Node Events",
+  "name": "06_express",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
+    "start": "node server",
+    "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "date-fns": "^4.1.0",
+    "express": "^5.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
